[gd_scene load_steps=4 format=3 uid="uid://catkndynfd4s5"]

[ext_resource type="PackedScene" uid="uid://beic3gevjusuj" path="res://scenes/PushableObject/pushable_object.tscn" id="1_wi1ai"]
[ext_resource type="Script" path="res://scenes/ParabolicMirror/parabolic_mirror.gd" id="2_84iss"]
[ext_resource type="Texture2D" uid="uid://bve80wrxbeco5" path="res://scenes/Lens_PlanoConvex/focalSpot.png" id="3_8ww8a"]

[node name="parabolicMirror" instance=ExtResource("1_wi1ai")]
position = Vector2(220, 236)
script = ExtResource("2_84iss")
focalLength = 128.0
mirrorHeight = 120.0
reflectivity = 1.0

[node name="surfaceArea" type="Area2D" parent="Stage" index="0"]

[node name="surfaceShape" type="CollisionPolygon2D" parent="Stage/surfaceArea" index="0"]
polygon = PackedVector2Array(18, 0, 16, -36, 12, -49, 0, -61, 27, -60, 26, 55, -1, 55, 9, 36, 15, 21)

[node name="mirrorOutline" type="Polygon2D" parent="Stage" index="1"]

[node name="focalPoint" type="Sprite2D" parent="Stage" index="2"]
position = Vector2(-16, 0)
texture = ExtResource("3_8ww8a")
